# liveinlife-api

./: .codacy.yml  .editorconfig  .gitignore  BUILD.bazel  Gopkg.toml  LICENSE  README.md  WORKSPACE  cloudbuild.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
api/openapi-spec/: Dockerfile  cloudbuild.yaml  entrypoint.sh  openapi.json  openapi.yaml
api/openapi-spec/docs/: index.html
cmd/auth/: BUILD.bazel  deployment.yaml  service.go  service.yaml
cmd/email/: BUILD.bazel  deployment.yaml  main.go
cmd/inventory/: BUILD.bazel  deployment.yaml  service.go  service.yaml
cmd/preselect/: BUILD.bazel  deployment.yaml  main.go  service.yaml
cmd/rbac/: BUILD.bazel  deployment.yaml  service.go  service.yaml
cmd/role/: BUILD.bazel  deployment.yaml  service.go
cmd/serviceaccount/: BUILD.bazel  deployment.yaml  service.go  service.yaml
cmd/topgenerator/: BUILD.bazel  deployment.yaml  main.go  service.yaml
cmd/user/: BUILD.bazel  deployment.yaml  service.go  service.yaml
helpers/: k8s.bzl
helpers/secrets/.kube/: config.cipher
pkg/api/: BUILD.bazel  api.go  logger.go
pkg/api/endpoint/: BUILD.bazel  transport.go  transport_test.go
pkg/apis/auth/: BUILD.bazel  auth.go  manager.go  manager_test.go  recaptcha.go  repository.go  transport.go  types.go
pkg/apis/auth/cockroachdb/: BUILD.bazel  db.go
pkg/apis/auth/mocks/: BUILD.bazel  repository.go
pkg/apis/inventory/: BUILD.bazel  grpc_client.go  grpc_server.go  manager.go  manager_test.go  repository.go  transport.go  types.go  types_test.go
pkg/apis/inventory/cockroachdb/: BUILD.bazel  complete.go  db.go  identifier.go
pkg/apis/inventory/mocks/: BUILD.bazel  identifier.go  manager.go  repository.go
pkg/apis/inventory/proto/: BUILD.bazel  manager.pb.go  manager.proto
pkg/apis/preselect/: BUILD.bazel  manager.go  preselect.go  repository.go  transport.go
pkg/apis/preselect/cockroachdb/: BUILD.bazel  db.go
pkg/apis/role/: BUILD.bazel  manager.go  manager_test.go  repository.go  transport.go  types.go  types_test.go
pkg/apis/role/cockroachdb/: BUILD.bazel  db.go
pkg/apis/role/mocks/: BUILD.bazel  identifier.go  manager.go  repository.go
pkg/apis/serviceaccount/: BUILD.bazel  grpc_client.go  grpc_server.go  manager.go  manager_test.go  repository.go  transport.go  types.go  types_test.go
pkg/apis/serviceaccount/cockroachdb/: BUILD.bazel  complete.go  db.go
pkg/apis/serviceaccount/key/: BUILD.bazel  grpc_client.go  grpc_server.go  manager.go  manager_test.go  repository.go  transport.go  types.go  types_test.go
pkg/apis/serviceaccount/key/cockroachdb/: BUILD.bazel  complete.go  db.go
pkg/apis/serviceaccount/key/mocks/: BUILD.bazel  identifier.go  manager.go  repository.go
pkg/apis/serviceaccount/key/proto/: BUILD.bazel  manager.pb.go  manager.proto
pkg/apis/serviceaccount/mocks/: BUILD.bazel  identifier.go  manager.go  repository.go
pkg/apis/serviceaccount/proto/: BUILD.bazel  manager.pb.go  manager.proto
pkg/apis/topgenerator/: BUILD.bazel  manager.go  repository.go  top.go  transport.go  types.go
pkg/apis/topgenerator/cockroachdb/: BUILD.bazel  db.go
pkg/apis/user/: BUILD.bazel  event.go  grpc_client.go  grpc_server.go  manager.go  manager_test.go  repository.go  transport.go  user.go  user_test.go
pkg/apis/user/cockroachdb/: BUILD.bazel  db.go
pkg/apis/user/mocks/: BUILD.bazel  complete_password.go  identifier.go  incomplete_password.go  manager.go  repository.go  wcf_repository.go
pkg/apis/user/mysql/: BUILD.bazel  wcf.go
pkg/apis/user/proto/: BUILD.bazel  manager.pb.go  manager.proto
pkg/bcrypt/: BUILD.bazel  README.md  bcrypt.go
pkg/email/: BUILD.bazel  email.go
pkg/encode/: BUILD.bazel  encode.go  json.go
pkg/event/: BUILD.bazel  consumer.go  event.go  producer.go
pkg/item/: BUILD.bazel  file.go  item.go
pkg/keys/: BUILD.bazel  keys.go  keys_test.go
pkg/problems/: BUILD.bazel  problems.go
pkg/pubsub/: BUILD.bazel  consumer.go  producer.go
pkg/pubsub/mocks/: BUILD.bazel  consumer.go  message.go  producer.go
pkg/pubsub/nsq/: BUILD.bazel  consumer.go  producer.go
pkg/rbac/: BUILD.bazel  account.go  account_test.go  control.go  control_test.go  grpc_client.go  grpc_server.go  repository.go  role.go  role_test.go  rule.go  subject.go  subject_test.go
pkg/rbac/cockroachdb/: BUILD.bazel  db.go
pkg/rbac/middleware/: BUILD.bazel  rulecheck.go
pkg/rbac/mocks/: BUILD.bazel  control.go  repository.go
pkg/rbac/proto/: BUILD.bazel  control.pb.go  control.proto
pkg/recaptcha/: BUILD.bazel  recaptcha.go
pkg/token/: BUILD.bazel  context.go  event.go  middleware.go  token.go  token_test.go
test/: BUILD.bazel  test.go  testPrivateKey.pem  testPublicKey.pem
