load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/51st-state/api/cmd/inventory",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "inventory",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
