load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "logger.go",
    ],
    importpath = "github.com/51st-state/api/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/rs/cors:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
