load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "manager.go",
    ],
    importpath = "github.com/51st-state/api/pkg/apis/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/user:go_default_library",
        "//pkg/token:go_default_library",
        "//vendor/github.com/dgrijalva/jwt-go:go_default_library",
    ],
)
