load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "consumer.go",
        "producer.go",
    ],
    importpath = "github.com/51st-state/api/pkg/pubsub/nsq",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/pubsub:go_default_library",
        "//vendor/github.com/nsqio/go-nsq:go_default_library",
    ],
)
