load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "complete.go",
        "db.go",
        "identifier.go",
    ],
    importpath = "github.com/51st-state/api/pkg/apis/inventory/cockroachdb",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/inventory:go_default_library",
        "//vendor/github.com/google/uuid:go_default_library",
    ],
)
