load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "identifier.go",
        "manager.go",
        "repository.go",
    ],
    importpath = "github.com/51st-state/api/pkg/apis/role/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/role:go_default_library",
        "//pkg/rbac:go_default_library",
    ],
)
