load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "complete_password.go",
        "identifier.go",
        "incomplete_password.go",
        "repository.go",
        "wcf_repository.go",
    ],
    importpath = "github.com/51st-state/api/pkg/apis/user/mocks",
    visibility = ["//visibility:public"],
    deps = ["//pkg/apis/user:go_default_library"],
)
